test/tests/stages/7_compound_statements/invalid_semantics/extra_credit/duplicate_labels_different_scopes.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CIf: 
                CVar: 
                  TIdentifier: x
                  None: 
                CCompound: 
                  CB: 
                    List[4]: 
                      CS: 
                        CExpression: 
                          CAssignment: 
                            None: 
                            CVar: 
                              TIdentifier: x
                              None: 
                            CConstant: 
                              CConstInt: 
                                TInt: 5
                              None: 
                            None: 
                      CS: 
                        CGoto: 
                          TIdentifier: l
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 0
                            None: 
                      CS: 
                        CLabel: 
                          TIdentifier: l
                          CReturn: 
                            CVar: 
                              TIdentifier: x
                              None: 
                CCompound: 
                  CB: 
                    List[3]: 
                      CS: 
                        CGoto: 
                          TIdentifier: l
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 0
                            None: 
                      CS: 
                        CLabel: 
                          TIdentifier: l
                          CReturn: 
                            CVar: 
                              TIdentifier: x
                              None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
